Added framework for a hip controller based on gait phase estimator.

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -29,7 +29,7 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
@@ -61,7 +61,7 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -91,7 +91,7 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -121,7 +121,7 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
@@ -145,7 +145,7 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -175,7 +175,7 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -205,7 +205,7 @@
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -235,7 +235,7 @@
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
@@ -265,7 +265,7 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
@@ -295,7 +295,7 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
