--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -2,7 +2,7 @@
 ; ALL FIELDS SHOULD BE LESS THAN 25 CHAR
 [Board]
 	name = AK_Board
-	version = 0.1
+	version = 0.5.1
 
 [Exo]
 	name = bilateralAnkle
@@ -12,13 +12,13 @@
     ; describes the type of battery used, values: smart(inspired energy), dumb (simple lipo)
 
 [test]
-	sides = bilateral
+	sides = right
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = 0
-	knee = 0
+	knee = AK60v1.1
 	ankle = 0
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
@@ -33,12 +33,12 @@
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
-	kneeDefaultController = 0
+	kneeDefaultController = elbowMinMax
 	ankleDefaultController = 0
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
-	hipFlipDir = left
-	kneeFlipDir = 0
+	hipFlipDir = 0
+	kneeFlipDir = right
 	ankleFlipDir = 0
 
 
@@ -64,9 +64,9 @@
 	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
-	hipDefaultController = bangBang
+	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = PJMC
+	ankleDefaultController = ptbGeneral
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
@@ -94,7 +94,7 @@
 	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
-	hipDefaultController = bangBang
+	hipDefaultController = ptbGeneral
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
 
@@ -126,7 +126,7 @@
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = PJMC
+	ankleDefaultController = ptbGeneral
     
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
@@ -292,7 +292,7 @@
     ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = 0
 	knee = 0
-	ankle = AK60v1.1
+	ankle = AK80
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
@@ -300,7 +300,7 @@
 	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = PJMC    
+	ankleDefaultController = ptbGeneral    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
@@ -313,3 +313,32 @@
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = right
+	[rightKnee]
+	sides = right
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
+	hip = 0
+	knee = AK60v1.1
+	ankle = 0
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
+	hipDefaultController = 0
+	kneeDefaultController = elbowMinMax
+	ankleDefaultController = 0  
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 4.5  
+    
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = 0
+	kneeFlipDir = right
+	ankleFlipDir = 0
