Added new version of AK601.1 Motors (Version that takes Torque Input instead of Current). Added PID control to ankle controllers.

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -16,7 +16,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
 	knee = AK60v1.1
 	ankle = 0
@@ -48,7 +48,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = AK60v1.1
@@ -79,7 +79,7 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = 0
@@ -108,7 +108,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
 	knee = 0
 	ankle = AK80
@@ -139,7 +139,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = AK60v1.1
@@ -169,7 +169,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = AK60v1.1
@@ -199,7 +199,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = 0
@@ -229,7 +229,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = AK60v1.1
 	knee = 0
 	ankle = 0
@@ -259,7 +259,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
 	knee = 0
 	ankle = AK60v1.1
@@ -289,7 +289,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
 	knee = 0
 	ankle = AK80
@@ -318,7 +318,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
-    ; values 0(not used), AK60, AK80, AK60v1.1,
+    ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
 	knee = AK60v1.1
 	ankle = 0
