--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,7 +85,12 @@
         "xmemory": "cpp",
         "xmemory0": "cpp",
         "xstddef": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "variant": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     },
     "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.1.1}",
     "nrf-connect.topdir": "${nrf-connect.sdk:2.1.1}"
