Introduced universal direction calibration
Currently only available at the ankle joint; this functionality helps calibrate the motor and torque sensor directions.

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -123,16 +123,30 @@
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis, gaitPhase
 	; Knee Controllers: zeroTorque, userDefined, sine, stasis
-	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis, ptbGeneral, calibrManager
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = ptbGeneral
+	ankleDefaultController = calibrManager
     
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = 0
 	kneeFlipDir = 0
-	ankleFlipDir = right
+	ankleFlipDir = 0
+	
+	
+	; flip direction for the motor cmd, 0 neither, left, right, both
+	hipFlipMotorDir = 0
+	kneeFlipMotorDir = 0
+	ankleFlipMotorDir = both
+	; flip direction for the torque sensor readings, 0 neither, left, right, both
+	hipFlipTorqueDir = 0
+	kneeFlipTorqueDir = 0
+	ankleFlipTorqueDir = right
+	; flip direction for the angle sensor readings, 0 neither, left, right, both
+	hipFlipAngleDir = 0
+	kneeFlipAngleDir = 0
+	ankleFlipAngleDir = 0
     
 [leftHipAnkle]
 	sides = left
@@ -320,7 +334,7 @@
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,AK60v1.1T
 	hip = 0
-	knee = AK60v1.1
+	knee = AK80
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
